--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>hello</mainClass>
+                  </configuration>
             </plugin>
             <!-- tag::plugin[] -->
             <plugin>
